tests/procedure_call/unclosed_left.datum.err
Error: Unexpected token in input, expected (, <keyword>, <primitive>, end of input
   ╭─[tests/procedure_call/unclosed_left.scm:1:3]
   │
 1 │ 32)
   ·   ┬  
   ·   ╰── Unexpected token )
───╯
